Add CSS/SVG infographics, charts, and visual data elements to content pages
- endoskopik-prosedurler: horizontal bar chart (kilo kaybı %), risk level indicators, recovery timeline
- karsilastirma: pros/cons cards with checkmarks/X icons, 5-year cost comparison bars
- index.html: donut chart (Turkey obesity 32.1%), '5 habits = +10 years' visual
- istatistikler: CSS-only trend bar chart, city comparison bars, gender donut (SVG)
- Blog key-stat boxes added to: glp1-tam-rehber, akdeniz-diyeti, blue-zones, bariatrik-cerrahi, esg-rehber

All pure CSS/SVG, no external libraries. Brand colors (#0D7377, #195157, #14919B, #E8963E).

--- a/index.html
+++ b/index.html
@@ -2042,6 +2042,43 @@
  </div>
  </section>
 
+ <!-- VISUAL DATA INFOGRAPHICS -->
+ <section style="padding:3.5rem 2rem;background:#f8fafa;">
+ <div style="max-width:900px;margin:0 auto;display:flex;gap:2.5rem;flex-wrap:wrap;justify-content:center;align-items:center;">
+ <!-- Donut Chart: Turkey Obesity Rate -->
+ <div style="text-align:center;">
+ <svg width="180" height="180" viewBox="0 0 180 180">
+ <circle cx="90" cy="90" r="70" fill="none" stroke="#eef3f4" stroke-width="22"/>
+ <circle cx="90" cy="90" r="70" fill="none" stroke="#0D7377" stroke-width="22" stroke-linecap="round"
+ stroke-dasharray="141 440" transform="rotate(-90 90 90)" style="transition:stroke-dasharray 1s ease;"/>
+ <text x="90" y="82" text-anchor="middle" font-family="Inter,sans-serif" font-size="28" font-weight="800" fill="#195157">%32.1</text>
+ <text x="90" y="105" text-anchor="middle" font-family="Inter,sans-serif" font-size="11" fill="#5a7a84">Obez + Fazla Kilolu</text>
+ </svg>
+ <p style="font-size:0.85rem;color:#5a7a84;margin-top:0.5rem;font-weight:600;">Türkiye Obezite Oranı</p>
+ <p style="font-size:0.7rem;color:#94a3b8;">Kaynak: TÜİK, 2023</p>
+ </div>
+ <!-- 5 Habits = +10 Years Visual -->
+ <div style="background:#fff;border-radius:16px;padding:2rem;box-shadow:0 2px 20px rgba(0,0,0,0.06);max-width:380px;text-align:center;">
+ <p style="font-size:0.75rem;font-weight:700;color:#E8963E;text-transform:uppercase;letter-spacing:2px;margin-bottom:1rem;">Harvard Araştırması</p>
+ <div style="display:flex;align-items:baseline;justify-content:center;gap:0.5rem;margin-bottom:1rem;">
+ <span style="font-size:3.5rem;font-weight:800;color:#0D7377;">5</span>
+ <span style="font-size:1.1rem;color:#5a7a84;">alışkanlık</span>
+ <span style="font-size:2rem;color:#E8963E;font-weight:800;">=</span>
+ <span style="font-size:3.5rem;font-weight:800;color:#0D7377;">+10</span>
+ <span style="font-size:1.1rem;color:#5a7a84;">yıl</span>
+ </div>
+ <div style="display:flex;justify-content:center;gap:0.75rem;flex-wrap:wrap;margin-bottom:1rem;">
+ <span style="background:#f0fdf4;border:1px solid #bbf7d0;padding:0.3rem 0.75rem;border-radius:20px;font-size:0.8rem;">🥗 Beslenme</span>
+ <span style="background:#eff6ff;border:1px solid #bfdbfe;padding:0.3rem 0.75rem;border-radius:20px;font-size:0.8rem;">🏃 Egzersiz</span>
+ <span style="background:#fef3c7;border:1px solid #fde68a;padding:0.3rem 0.75rem;border-radius:20px;font-size:0.8rem;">⚖️ Kilo</span>
+ <span style="background:#fce7f3;border:1px solid #fbcfe8;padding:0.3rem 0.75rem;border-radius:20px;font-size:0.8rem;">🚭 Sigara</span>
+ <span style="background:#f5f3ff;border:1px solid #ddd6fe;padding:0.3rem 0.75rem;border-radius:20px;font-size:0.8rem;">🍷 Alkol</span>
+ </div>
+ <p style="font-size:0.7rem;color:#94a3b8;">Li Y, et al. Circulation. 2018;138(4):345-355</p>
+ </div>
+ </div>
+ </section>
+
      <!-- GÜNÜN BİLGİSİ — PREMIUM -->
     <section id="gunun-bilgisi" style="padding:0;position:relative;overflow:hidden;">
         <video class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
