--- a/pages/istatistikler.html
+++ b/pages/istatistikler.html
@@ -179,6 +179,74 @@ body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--text);line-
 </div>
 </div>
 
+<!-- CSS-Only Infographic Summary -->
+<div class="chart-card visible">
+<h2>📊 Özet İnfografik — Türkiye Obezite Görünümü</h2>
+<p class="source">Saf CSS/SVG — JavaScript gerektirmez</p>
+
+<!-- Turkey obesity trend - CSS bar chart -->
+<h3 style="font-size:1rem;font-weight:600;color:var(--primary-dark);margin:1.5rem 0 1rem;">Yıllara Göre Obezite Trendi</h3>
+<div style="display:flex;align-items:flex-end;gap:4px;height:160px;padding:10px 0;">
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:var(--primary);">%15.2</span>
+<div style="width:100%;max-width:32px;height:48%;background:linear-gradient(180deg,#14919B,#0D7377);border-radius:3px 3px 0 0;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2010</span>
+</div>
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:var(--primary);">%17.2</span>
+<div style="width:100%;max-width:32px;height:55%;background:linear-gradient(180deg,#14919B,#0D7377);border-radius:3px 3px 0 0;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2014</span>
+</div>
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:var(--primary);">%19.6</span>
+<div style="width:100%;max-width:32px;height:63%;background:linear-gradient(180deg,#14919B,#0D7377);border-radius:3px 3px 0 0;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2017</span>
+</div>
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:var(--primary);">%20.2</span>
+<div style="width:100%;max-width:32px;height:65%;background:linear-gradient(180deg,#14919B,#0D7377);border-radius:3px 3px 0 0;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2019</span>
+</div>
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:var(--accent);">%21.1</span>
+<div style="width:100%;max-width:32px;height:68%;background:linear-gradient(180deg,var(--accent),#d97706);border-radius:3px 3px 0 0;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2023</span>
+</div>
+<div style="flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;height:100%;">
+<span style="font-size:.6rem;font-weight:700;color:#ef4444;">%26-28</span>
+<div style="width:100%;max-width:32px;height:85%;background:linear-gradient(180deg,#ef4444,#dc2626);border-radius:3px 3px 0 0;opacity:0.5;border:2px dashed #ef4444;"></div>
+<span style="font-size:.6rem;color:var(--text-light);margin-top:3px;">2030*</span>
+</div>
+</div>
+<p style="font-size:.7rem;color:var(--text-light);margin-top:0.5rem;">* 2030 projeksiyonu (OECD/WHO)</p>
+
+<!-- City comparison - horizontal bars -->
+<h3 style="font-size:1rem;font-weight:600;color:var(--primary-dark);margin:2rem 0 1rem;">Bölgelere Göre Obezite (%)</h3>
+<div style="display:flex;flex-direction:column;gap:0.6rem;">
+<div style="display:flex;align-items:center;gap:0.6rem;"><span style="width:100px;font-size:.8rem;font-weight:500;text-align:right;flex-shrink:0;">Güneydoğu A.</span><div style="flex:1;height:22px;background:#eef3f4;border-radius:5px;overflow:hidden;"><div style="width:82%;height:100%;background:linear-gradient(90deg,var(--accent),#f0a854);border-radius:5px;display:flex;align-items:center;justify-content:flex-end;padding-right:6px;font-size:.7rem;font-weight:700;color:#fff;">%26.2</div></div></div>
+<div style="display:flex;align-items:center;gap:0.6rem;"><span style="width:100px;font-size:.8rem;font-weight:500;text-align:right;flex-shrink:0;">Doğu Anadolu</span><div style="flex:1;height:22px;background:#eef3f4;border-radius:5px;overflow:hidden;"><div style="width:74%;height:100%;background:linear-gradient(90deg,var(--primary),#14a3a8);border-radius:5px;display:flex;align-items:center;justify-content:flex-end;padding-right:6px;font-size:.7rem;font-weight:700;color:#fff;">%23.8</div></div></div>
+<div style="display:flex;align-items:center;gap:0.6rem;"><span style="width:100px;font-size:.8rem;font-weight:500;text-align:right;flex-shrink:0;">İç Anadolu</span><div style="flex:1;height:22px;background:#eef3f4;border-radius:5px;overflow:hidden;"><div style="width:70%;height:100%;background:linear-gradient(90deg,var(--primary),#14a3a8);border-radius:5px;display:flex;align-items:center;justify-content:flex-end;padding-right:6px;font-size:.7rem;font-weight:700;color:#fff;">%22.5</div></div></div>
+<div style="display:flex;align-items:center;gap:0.6rem;"><span style="width:100px;font-size:.8rem;font-weight:500;text-align:right;flex-shrink:0;">Marmara</span><div style="flex:1;height:22px;background:#eef3f4;border-radius:5px;overflow:hidden;"><div style="width:63%;height:100%;background:linear-gradient(90deg,var(--primary),#14a3a8);border-radius:5px;display:flex;align-items:center;justify-content:flex-end;padding-right:6px;font-size:.7rem;font-weight:700;color:#fff;">%20.3</div></div></div>
+<div style="display:flex;align-items:center;gap:0.6rem;"><span style="width:100px;font-size:.8rem;font-weight:500;text-align:right;flex-shrink:0;">Ege</span><div style="flex:1;height:22px;background:#eef3f4;border-radius:5px;overflow:hidden;"><div style="width:58%;height:100%;background:linear-gradient(90deg,var(--primary-dark),#2a7a82);border-radius:5px;display:flex;align-items:center;justify-content:flex-end;padding-right:6px;font-size:.7rem;font-weight:700;color:#fff;">%18.7</div></div></div>
+</div>
+
+<!-- Gender donut - SVG -->
+<h3 style="font-size:1rem;font-weight:600;color:var(--primary-dark);margin:2rem 0 1rem;">Cinsiyete Göre Dağılım</h3>
+<div style="display:flex;align-items:center;justify-content:center;gap:2rem;flex-wrap:wrap;">
+<svg width="150" height="150" viewBox="0 0 150 150">
+<circle cx="75" cy="75" r="55" fill="none" stroke="#eef3f4" stroke-width="20"/>
+<circle cx="75" cy="75" r="55" fill="none" stroke="#E8963E" stroke-width="20" stroke-dasharray="86 346" transform="rotate(-90 75 75)" stroke-linecap="round"/>
+<circle cx="75" cy="75" r="55" fill="none" stroke="#0D7377" stroke-width="20" stroke-dasharray="60 346" stroke-dashoffset="-86" transform="rotate(-90 75 75)" stroke-linecap="round"/>
+<text x="75" y="72" text-anchor="middle" font-family="Inter,sans-serif" font-size="16" font-weight="800" fill="#1a2e35">%21.1</text>
+<text x="75" y="88" text-anchor="middle" font-family="Inter,sans-serif" font-size="8" fill="#5a7a84">Genel</text>
+</svg>
+<div style="display:flex;flex-direction:column;gap:0.5rem;">
+<div style="display:flex;align-items:center;gap:0.5rem;"><div style="width:12px;height:12px;border-radius:3px;background:#E8963E;"></div><span style="font-size:.9rem;font-weight:600;">Kadın: %24.8</span></div>
+<div style="display:flex;align-items:center;gap:0.5rem;"><div style="width:12px;height:12px;border-radius:3px;background:#0D7377;"></div><span style="font-size:.9rem;font-weight:600;">Erkek: %17.3</span></div>
+</div>
+</div>
+</div>
+
 <!-- Share -->
 <div class="share-bar">
 <h3>Bu sayfayı paylaşın</h3>
