--- a/pages/stres/kronik-stres.html
+++ b/pages/stres/kronik-stres.html
@@ -67,7 +67,7 @@
  @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } .comparison-table { font-size: 0.85rem; } }
  </style>
 </head>
-<body>
+<body class="category-stres">
  <a href="#ana-icerik" class="skip-link" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Ana içeriğe geç</a>
 
  <header class="header">
@@ -91,6 +91,41 @@
  <h2>Stres Her Zaman Kötü Değildir</h2>
  <p>Önce önemli bir ayrımla başlayalım: Stres, evrimsel olarak hayatta kalmamızı sağlayan bir mekanizmadır. Bir araba size doğru geldiğinde veya önemli bir sınava hazırlandığınızda devreye giren <strong>akut stres</strong>, performansınızı artırır ve sizi korur.</p>
  <p>Sorun, stres tepkisinin <strong>kapanmaması</strong> durumunda başlar. İş baskısı, finansal kaygılar, ilişki sorunları veya belirsizlik gibi sürekli stresörler, vücudunuzu aylar veya yıllar boyunca "alarm modunda" tutar. İşte buna <strong>kronik stres</strong> denir — ve bu, sağlığınız için ciddi bir tehdittir.</p>
+
+ <!-- Stress Response Infographic -->
+ <div class="infographic">
+   <svg viewBox="0 0 700 180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Stres tepki süreci">
+     <!-- Flow: Stresör → Beyin → Kortizol → Etki -->
+     <rect x="20" y="40" width="130" height="100" rx="14" fill="#fffbeb" stroke="#D4A030" stroke-width="1.5"/>
+     <text x="85" y="80" text-anchor="middle" font-size="28">⚡</text>
+     <text x="85" y="108" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Stresör</text>
+     <text x="85" y="124" text-anchor="middle" fill="#a07818" font-size="9">İş, finans, ilişki</text>
+     <!-- Arrow -->
+     <text x="170" y="95" fill="#D4A030" font-size="24">→</text>
+     <!-- Brain -->
+     <rect x="200" y="40" width="130" height="100" rx="14" fill="#fffbeb" stroke="#D4A030" stroke-width="1.5"/>
+     <text x="265" y="80" text-anchor="middle" font-size="28">🧠</text>
+     <text x="265" y="108" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">HPA Ekseni</text>
+     <text x="265" y="124" text-anchor="middle" fill="#a07818" font-size="9">Hipotalamus aktif</text>
+     <!-- Arrow -->
+     <text x="350" y="95" fill="#D4A030" font-size="24">→</text>
+     <!-- Cortisol -->
+     <rect x="380" y="40" width="130" height="100" rx="14" fill="#fffbeb" stroke="#D4A030" stroke-width="1.5"/>
+     <text x="445" y="80" text-anchor="middle" font-size="28">🔬</text>
+     <text x="445" y="108" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Kortizol ↑</text>
+     <text x="445" y="124" text-anchor="middle" fill="#a07818" font-size="9">Kronik yüksek düzey</text>
+     <!-- Arrow -->
+     <text x="530" y="95" fill="#D4A030" font-size="24">→</text>
+     <!-- Effects -->
+     <rect x="560" y="40" width="130" height="100" rx="14" fill="#fef2f2" stroke="#ef4444" stroke-width="1.5"/>
+     <text x="625" y="80" text-anchor="middle" font-size="28">💔</text>
+     <text x="625" y="108" text-anchor="middle" fill="#991b1b" font-size="12" font-weight="700">Hasar</text>
+     <text x="625" y="124" text-anchor="middle" fill="#b91c1c" font-size="9">Kalp, bağışıklık, beyin</text>
+   </svg>
+   <p class="infographic-caption">Kronik stresin vücuttaki yolculuğu: stresörden organ hasarına</p>
+ </div>
+
+ <div class="pull-quote">Kronik stres, vücudunuzun yangın alarmını sürekli açık bırakmak gibidir — sonunda sistem çöker.</div>
 
  <h2>Akut Stres vs. Kronik Stres</h2>
  <table class="comparison-table" aria-label="Akut ve kronik stres karşılaştırması">
