--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -645,6 +645,74 @@
  </div>
  </section>
 
+ <!-- VISUAL COMPARISON CARDS -->
+ <section class="cards-section">
+ <h2 style="text-align:center;font-size:1.6rem;font-weight:700;color:var(--dark-teal);margin-bottom:0.5rem;">Avantaj & Dezavantaj Karşılaştırması</h2>
+ <p style="text-align:center;color:#64748B;margin-bottom:2rem;">Her tedavinin güçlü ve zayıf yönleri</p>
+ <div class="cards-grid">
+ <!-- GLP-1 Pros/Cons -->
+ <div style="background:#fff;border-radius:16px;padding:2rem;box-shadow:var(--card-shadow);">
+ <h3 style="color:#6366F1;font-size:1.1rem;margin-bottom:1.25rem;">💊 GLP-1 İlaçları</h3>
+ <div style="margin-bottom:1rem;">
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Cerrahi yok, iğne ile uygulama</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Tamamen geri dönüşümlü</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">İyileşme süresi yok</span></div>
+ </div>
+ <div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Bırakınca %60-70 geri alım</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Ömür boyu ilaç maliyeti</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Kas kütlesi kaybı riski</span></div>
+ </div>
+ </div>
+ <!-- ESG Pros/Cons -->
+ <div style="background:#fff;border-radius:16px;padding:2rem;box-shadow:var(--card-shadow);border:2px solid var(--orange);">
+ <h3 style="color:var(--teal);font-size:1.1rem;margin-bottom:1.25rem;">🔬 ESG <span style="background:var(--orange);color:#fff;font-size:0.7rem;padding:0.15rem 0.5rem;border-radius:10px;vertical-align:middle;">Dengeli</span></h3>
+ <div style="margin-bottom:1rem;">
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Kesi yok, aynı gün taburcu</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Kalıcı yapısal değişiklik</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Tek seferlik maliyet</span></div>
+ </div>
+ <div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">SGK karşılamıyor</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Uzun vadeli veri sınırlı</span></div>
+ </div>
+ </div>
+ <!-- Surgery Pros/Cons -->
+ <div style="background:#fff;border-radius:16px;padding:2rem;box-shadow:var(--card-shadow);">
+ <h3 style="color:#374151;font-size:1.1rem;margin-bottom:1.25rem;">🏥 Bariatrik Cerrahi</h3>
+ <div style="margin-bottom:1rem;">
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">En yüksek kilo kaybı (%25-35)</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Güçlü metabolik iyileşme</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#10b981;font-size:1.1rem;flex-shrink:0;">✅</span><span style="font-size:0.9rem;">Koşullu SGK karşılama</span></div>
+ </div>
+ <div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Geri dönüşümsüz</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;margin-bottom:0.6rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">2-4 hafta iyileşme</span></div>
+ <div style="display:flex;align-items:flex-start;gap:0.5rem;"><span style="color:#ef4444;font-size:1.1rem;flex-shrink:0;">❌</span><span style="font-size:0.9rem;">Ömür boyu vitamin takibi</span></div>
+ </div>
+ </div>
+ </div>
+
+ <!-- Cost Comparison Visual -->
+ <h2 style="text-align:center;font-size:1.4rem;font-weight:700;color:var(--dark-teal);margin:3rem 0 0.5rem;">💰 5 Yıllık Maliyet Karşılaştırması</h2>
+ <p style="text-align:center;color:#64748B;margin-bottom:1.5rem;font-size:0.9rem;">Tahmini toplam maliyet (TL)</p>
+ <div style="background:#fff;border-radius:16px;padding:2rem;box-shadow:var(--card-shadow);max-width:700px;margin:0 auto 2rem;">
+ <div style="margin-bottom:1.25rem;">
+ <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:0.4rem;"><span style="font-weight:600;font-size:0.9rem;">💊 GLP-1 (5 yıl)</span><span style="font-weight:700;color:#6366F1;">₺300,000+</span></div>
+ <div style="height:24px;background:#F1F5F9;border-radius:6px;overflow:hidden;"><div style="width:95%;height:100%;background:linear-gradient(90deg,#6366F1,#818CF8);border-radius:6px;"></div></div>
+ </div>
+ <div style="margin-bottom:1.25rem;">
+ <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:0.4rem;"><span style="font-weight:600;font-size:0.9rem;">🏥 Cerrahi</span><span style="font-weight:700;color:#374151;">₺150,000-250,000</span></div>
+ <div style="height:24px;background:#F1F5F9;border-radius:6px;overflow:hidden;"><div style="width:65%;height:100%;background:linear-gradient(90deg,#374151,#6B7280);border-radius:6px;"></div></div>
+ </div>
+ <div style="margin-bottom:1.25rem;">
+ <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:0.4rem;"><span style="font-weight:600;font-size:0.9rem;">🔬 ESG</span><span style="font-weight:700;color:var(--teal);">₺100,000-180,000</span></div>
+ <div style="height:24px;background:#F1F5F9;border-radius:6px;overflow:hidden;"><div style="width:45%;height:100%;background:linear-gradient(90deg,var(--teal),#0a9396);border-radius:6px;"></div></div>
+ </div>
+ <p style="font-size:0.75rem;color:#94A3B8;margin-top:1rem;text-align:center;">* GLP-1 maliyeti ömür boyu kullanım gerektirir. ESG ve cerrahi tek seferlik maliyettir.</p>
+ </div>
+ </section>
+
  <div class="section-divider"><hr></div>
 
  <!-- SIDE-BY-SIDE COMPARISON -->
