--- a/pages/egzersiz/kuvvet-antrenman.html
+++ b/pages/egzersiz/kuvvet-antrenman.html
@@ -67,7 +67,7 @@
  @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
  </style>
 </head>
-<body>
+<body class="category-egzersiz">
  <a href="#main-content" class="skip-link" style="position:absolute;left:-9999px;top:0;padding:1rem;background:#fff;z-index:9999;">İçeriğe geç</a>
 
  <header class="header" role="navigation">
@@ -92,6 +92,41 @@
  <p>Kuvvet antrenmanı (direnç antrenmanı), kaslarınızı bir dirence karşı çalıştırdığınız her türlü egzersizdir. Bu direnç vücut ağırlığınız, dambıl, barbell, direnç bandı veya makine olabilir. Amaç kasları zorlayarak adaptasyon — yani güçlenme ve büyüme — sağlamaktır.</p>
  <p>Amerikan Spor Tıbbı Koleji (ACSM) ve WHO, tüm yetişkinlere haftada <strong>en az 2 gün</strong> büyük kas gruplarını çalıştıran kuvvet antrenmanı önermektedir. Ne yazık ki Türkiye'de yetişkinlerin yalnızca <strong>%15'i</strong> bu öneriye uymaktadır.</p>
  <p>Kuvvet antrenmanı sadece "kas yapmak" değildir. Kemik yoğunluğundan metabolizmaya, ruh sağlığından günlük fonksiyonel kapasiteye kadar hayatınızın her alanını iyileştirir.</p>
+
+ <!-- Exercise Types SVG Infographic -->
+ <div class="infographic">
+   <svg viewBox="0 0 700 160" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Kuvvet antrenmanı türleri">
+     <defs>
+       <linearGradient id="exG" x1="0" y1="0" x2="0" y2="1"><stop offset="0%" stop-color="#E8963E"/><stop offset="100%" stop-color="#b5700e"/></linearGradient>
+     </defs>
+     <!-- Dumbbell icon -->
+     <rect x="20" y="20" width="140" height="120" rx="14" fill="#fff7ed" stroke="#E8963E" stroke-width="1.5"/>
+     <text x="90" y="70" text-anchor="middle" font-size="32">🏋️</text>
+     <text x="90" y="100" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Serbest Ağırlık</text>
+     <text x="90" y="118" text-anchor="middle" fill="#b45309" font-size="9">Dambıl, Barbell</text>
+     <!-- Bands icon -->
+     <rect x="190" y="20" width="140" height="120" rx="14" fill="#fff7ed" stroke="#E8963E" stroke-width="1.5"/>
+     <text x="260" y="70" text-anchor="middle" font-size="32">🔗</text>
+     <text x="260" y="100" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Direnç Bandı</text>
+     <text x="260" y="118" text-anchor="middle" fill="#b45309" font-size="9">Elastik Bantlar</text>
+     <!-- Bodyweight icon -->
+     <rect x="360" y="20" width="140" height="120" rx="14" fill="#fff7ed" stroke="#E8963E" stroke-width="1.5"/>
+     <text x="430" y="70" text-anchor="middle" font-size="32">🤸</text>
+     <text x="430" y="100" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Vücut Ağırlığı</text>
+     <text x="430" y="118" text-anchor="middle" fill="#b45309" font-size="9">Şınav, Squat</text>
+     <!-- Machine icon -->
+     <rect x="530" y="20" width="140" height="120" rx="14" fill="#fff7ed" stroke="#E8963E" stroke-width="1.5"/>
+     <text x="600" y="70" text-anchor="middle" font-size="32">⚙️</text>
+     <text x="600" y="100" text-anchor="middle" fill="#92400e" font-size="12" font-weight="700">Makine</text>
+     <text x="600" y="118" text-anchor="middle" fill="#b45309" font-size="9">Yönlendirilmiş hareket</text>
+   </svg>
+   <p class="infographic-caption">Kuvvet antrenmanında kullanılan dört temel direnç kaynağı</p>
+ </div>
+
+ <div class="stat-highlight">
+   <div class="stat-number">%15</div>
+   <div class="stat-text">Türkiye'de yetişkinlerin yalnızca %15'i WHO'nun önerdiği haftada 2 gün kuvvet antrenmanı hedefini karşılıyor</div>
+ </div>
 
  <h2>Bilimsel Faydaları</h2>
 
