--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -162,6 +162,46 @@
  </div>
  </div>
 
+ <!-- Procedure Comparison Infographic -->
+ <div class="infographic">
+ <svg viewBox="0 0 700 200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Prosedür karşılaştırma görseli">
+   <defs>
+     <linearGradient id="gESG" x1="0" y1="0" x2="0" y2="1"><stop offset="0%" stop-color="#2B7AB5"/><stop offset="100%" stop-color="#1a5a8a"/></linearGradient>
+     <linearGradient id="gBal" x1="0" y1="0" x2="0" y2="1"><stop offset="0%" stop-color="#10b981"/><stop offset="100%" stop-color="#059669"/></linearGradient>
+     <linearGradient id="gPOS" x1="0" y1="0" x2="0" y2="1"><stop offset="0%" stop-color="#8b5cf6"/><stop offset="100%" stop-color="#6d28d9"/></linearGradient>
+   </defs>
+   <!-- ESG -->
+   <rect x="40" y="30" width="180" height="150" rx="16" fill="url(#gESG)" opacity="0.9"/>
+   <text x="130" y="68" text-anchor="middle" fill="white" font-size="14" font-weight="700">ESG</text>
+   <text x="130" y="110" text-anchor="middle" fill="white" font-size="32" font-weight="800">%15-20</text>
+   <text x="130" y="132" text-anchor="middle" fill="rgba(255,255,255,0.8)" font-size="11">Kilo Kaybı</text>
+   <text x="130" y="160" text-anchor="middle" fill="rgba(255,255,255,0.7)" font-size="11">60-90 dk · Kalıcı</text>
+   <!-- Balon -->
+   <rect x="260" y="30" width="180" height="150" rx="16" fill="url(#gBal)" opacity="0.9"/>
+   <text x="350" y="68" text-anchor="middle" fill="white" font-size="14" font-weight="700">Mide Balonu</text>
+   <text x="350" y="110" text-anchor="middle" fill="white" font-size="32" font-weight="800">%10-15</text>
+   <text x="350" y="132" text-anchor="middle" fill="rgba(255,255,255,0.8)" font-size="11">Kilo Kaybı</text>
+   <text x="350" y="160" text-anchor="middle" fill="rgba(255,255,255,0.7)" font-size="11">20-30 dk · Geçici</text>
+   <!-- POSE -->
+   <rect x="480" y="30" width="180" height="150" rx="16" fill="url(#gPOS)" opacity="0.9"/>
+   <text x="570" y="68" text-anchor="middle" fill="white" font-size="14" font-weight="700">POSE</text>
+   <text x="570" y="110" text-anchor="middle" fill="white" font-size="32" font-weight="800">%12-18</text>
+   <text x="570" y="132" text-anchor="middle" fill="rgba(255,255,255,0.8)" font-size="11">Kilo Kaybı</text>
+   <text x="570" y="160" text-anchor="middle" fill="rgba(255,255,255,0.7)" font-size="11">45-60 dk · Kalıcı</text>
+ </svg>
+ <p class="infographic-caption">Endoskopik prosedürlerin karşılaştırmalı özeti — tümü kesi gerektirmez</p>
+ </div>
+
+ <!-- Key Takeaway -->
+ <div class="key-takeaway">
+   <h4>Ana Çıkarım</h4>
+   <ul>
+     <li>✅ Endoskopik prosedürler cerrahi riskler olmadan etkili kilo kaybı sağlar</li>
+     <li>✅ Aynı gün taburculuk — hızlı günlük yaşama dönüş</li>
+     <li>✅ BMI 30-40 arası hastalar için ideal seçenekler</li>
+   </ul>
+ </div>
+
  <h2>Karşılaştırma Tablosu</h2>
  <table class="comparison-table">
  <thead>
