Break template monotony: category accent colors, SVG infographics, stat highlights, pull quotes
- styles/content-page.css: Add 5 category accent color systems (beslenme/green, egzersiz/orange, uyku/purple, stres/amber, tedavi/blue) with CSS custom properties that cascade to TOC, headings, badges, key-takeaway boxes, numbered steps, and hero overlays
- Add .stat-highlight, .infographic, .process-steps CSS components
- All 30 content pages: Add category-* body class for automatic accent theming
- pages/tedavi/endoskopik-prosedurler.html: SVG procedure comparison cards + key takeaway box
- pages/uyku/uyku-hijyeni.html: Sleep cycle wave SVG infographic + stat highlight (%65) + pull quote
- pages/egzersiz/kuvvet-antrenman.html: Exercise type icons SVG + stat highlight (%15) + key takeaway
- pages/stres/kronik-stres.html: Stress response flow SVG infographic + pull quote + stat highlight (%75)
- pages/beslenme/kalori-hesaplayici.html: Healthy plate/macros SVG infographic
- Hub pages (beslenme, egzersiz, uyku-stres, tedavi): Distinct colored hero icons and category-tinted hero overlays

--- a/pages/beslenme.html
+++ b/pages/beslenme.html
@@ -44,17 +44,20 @@
  <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=1400&q=80">
  <source src="../videos/background-5.mp4" type="video/mp4">
  </video>
- <div class="page-hero-overlay"></div>
+ <div class="page-hero-overlay" style="background:linear-gradient(135deg, rgba(26,107,48,0.85), rgba(45,159,79,0.75))"></div>
  <div class="page-hero-content">
  <nav class="hero-breadcrumb">
  <a href="../index.html">Ana Sayfa</a>
  <span>›</span>
  <span class="current">Beslenme Rehberi</span>
  </nav>
- <div class="page-hero-icon">
- <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
- <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/>
- <path d="M12 6v6l4 2"/>
+ <div class="page-hero-icon" style="width:64px;height:64px;background:rgba(45,159,79,0.2);border-radius:50%;display:flex;align-items:center;justify-content:center;margin-bottom:1rem;">
+ <svg viewBox="0 0 24 24" fill="none" stroke="#2D9F4F" stroke-width="2" width="36" height="36">
+ <path d="M18 8h1a4 4 0 010 8h-1"/>
+ <path d="M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8z"/>
+ <line x1="6" y1="1" x2="6" y2="4"/>
+ <line x1="10" y1="1" x2="10" y2="4"/>
+ <line x1="14" y1="1" x2="14" y2="4"/>
  </svg>
  </div>
  <h1>Beslenme Rehberi</h1>
