--- a/pages/beslenme/bana-ne-uygun.html
+++ b/pages/beslenme/bana-ne-uygun.html
@@ -83,7 +83,7 @@
  }
  </style>
 </head>
-<body>
+<body class="category-beslenme">
  <a href="#main-content" class="skip-link" style="position:absolute;left:-9999px;top:0;padding:1rem;background:#fff;z-index:9999;">İçeriğe geç</a>
 
  <header class="header">
