--- a/pages/beslenme/kalori-hesaplayici.html
+++ b/pages/beslenme/kalori-hesaplayici.html
@@ -113,6 +113,35 @@
 
  <main class="guide-content" id="main-content">
 
+ <!-- Healthy Plate Infographic -->
+ <div class="infographic">
+   <svg viewBox="0 0 400 360" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Sağlıklı tabak modeli">
+     <!-- Plate circle -->
+     <circle cx="200" cy="180" r="150" fill="#f0fdf4" stroke="#2D9F4F" stroke-width="2"/>
+     <!-- Quadrants -->
+     <!-- Protein (top-right) -->
+     <path d="M 200 180 L 200 30 A 150 150 0 0 1 350 180 Z" fill="#dcfce7" stroke="#2D9F4F" stroke-width="1"/>
+     <text x="270" y="120" text-anchor="middle" fill="#166534" font-size="13" font-weight="700">Protein</text>
+     <text x="270" y="138" text-anchor="middle" fill="#166534" font-size="10">%25-30</text>
+     <!-- Carbs (top-left) -->
+     <path d="M 200 180 L 50 180 A 150 150 0 0 1 200 30 Z" fill="#fef9c3" stroke="#2D9F4F" stroke-width="1"/>
+     <text x="130" y="120" text-anchor="middle" fill="#854d0e" font-size="13" font-weight="700">Karbonhidrat</text>
+     <text x="130" y="138" text-anchor="middle" fill="#854d0e" font-size="10">%40-50</text>
+     <!-- Vegetables (bottom-left) -->
+     <path d="M 200 180 L 200 330 A 150 150 0 0 1 50 180 Z" fill="#d1fae5" stroke="#2D9F4F" stroke-width="1"/>
+     <text x="130" y="260" text-anchor="middle" fill="#065f46" font-size="13" font-weight="700">Sebze</text>
+     <text x="130" y="278" text-anchor="middle" fill="#065f46" font-size="10">Bol çeşit</text>
+     <!-- Fat (bottom-right) -->
+     <path d="M 200 180 L 350 180 A 150 150 0 0 1 200 330 Z" fill="#fef3c7" stroke="#2D9F4F" stroke-width="1"/>
+     <text x="270" y="260" text-anchor="middle" fill="#92400e" font-size="13" font-weight="700">Yağ</text>
+     <text x="270" y="278" text-anchor="middle" fill="#92400e" font-size="10">%20-30</text>
+     <!-- Center circle -->
+     <circle cx="200" cy="180" r="30" fill="white" stroke="#2D9F4F" stroke-width="1.5"/>
+     <text x="200" y="184" text-anchor="middle" fill="#2D9F4F" font-size="11" font-weight="700">TDEE</text>
+   </svg>
+   <p class="infographic-caption">Dengeli beslenme tabağı — makro besin dağılımı oranları</p>
+ </div>
+
  <!-- CALCULATOR -->
  <div class="calc-container" role="form" aria-label="Kalori Hesaplayıcı">
  <h3> Günlük Kalori İhtiyacınızı Hesaplayın</h3>
