--- a/pages/egzersiz/grup-egzersizleri.html
+++ b/pages/egzersiz/grup-egzersizleri.html
@@ -65,7 +65,7 @@
  @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
  </style>
 </head>
-<body>
+<body class="category-egzersiz">
  <a href="#main-content" class="skip-link" style="position:absolute;left:-9999px;top:0;padding:1rem;background:#fff;z-index:9999;">İçeriğe geç</a>
 
  <header class="header">
