--- a/pages/egzersiz/kuvvet-antrenman.html
+++ b/pages/egzersiz/kuvvet-antrenman.html
@@ -153,6 +153,16 @@
  <li>Bilişsel fonksiyonları korur — özellikle 60+ yaş grubunda demans riskini düşürür</li>
  </ul>
 
+ <div class="key-takeaway">
+   <h4>Ana Çıkarım</h4>
+   <ul>
+     <li>✅ Haftada 2+ gün kuvvet antrenmanı — WHO'nun temel önerisi</li>
+     <li>✅ Kemik yoğunluğunu artırır, düşme riskini %40 azaltır</li>
+     <li>✅ Bazal metabolizmayı %7-9 hızlandırır</li>
+     <li>✅ Depresyon belirtilerini %33 azaltır</li>
+   </ul>
+ </div>
+
  <div class="info-box tip">
  <h4> "Kadınlar Ağır Kaldırırsa Erkeksi Görünür" Efsanesi</h4>
  <p>Bu tamamen yanlıştır. Kadınlarda testosteron seviyesi erkeklerin <strong>%5-10'u</strong> kadardır. Kuvvet antrenmanı kadınlarda hacim değil, tonus ve güç kazandırır. Araştırmalar, düzenli kuvvet antrenmanı yapan kadınların daha sıkı, şekilli ve güçlü bir vücuda sahip olduğunu göstermektedir.</p>
