--- a/pages/stres/is-yasam-dengesi.html
+++ b/pages/stres/is-yasam-dengesi.html
@@ -68,7 +68,7 @@
  @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
  </style>
 </head>
-<body>
+<body class="category-stres">
  <a href="#ana-icerik" class="skip-link" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Ana içeriğe geç</a>
 
  <header class="header">
