--- a/pages/stres/kronik-stres.html
+++ b/pages/stres/kronik-stres.html
@@ -170,6 +170,11 @@
  </tbody>
  </table>
 
+ <div class="stat-highlight">
+   <div class="stat-number">%75</div>
+   <div class="stat-text">Tüm doktor ziyaretlerinin tahmini %75'i stresle ilişkili şikayetlerden kaynaklanmaktadır (American Institute of Stress)</div>
+ </div>
+
  <h2>HPA Ekseni: Stres Tepkisinin Merkezi</h2>
  <p>Stres tepkinizi yöneten sistem <strong>HPA ekseni</strong>dir (Hipotalamus-Hipofiz-Adrenal). Bu üç yapı, bir alarm zinciri gibi çalışır:</p>
  <ol>
