--- a/pages/tedavi.html
+++ b/pages/tedavi.html
@@ -234,15 +234,15 @@
  <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=1400&q=80">
  <source src="../videos/background-3.mp4" type="video/mp4">
  </video>
- <div class="page-hero-overlay"></div>
+ <div class="page-hero-overlay" style="background:linear-gradient(135deg, rgba(18,60,100,0.85), rgba(43,122,181,0.75))"></div>
  <div class="page-hero-content">
  <nav class="hero-breadcrumb">
  <a href="../index.html">Ana Sayfa</a>
  <span>›</span>
  <span class="current">Tedavi Seçenekleri</span>
  </nav>
- <div class="page-hero-icon">
- <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+ <div class="page-hero-icon" style="width:64px;height:64px;background:rgba(43,122,181,0.2);border-radius:50%;display:flex;align-items:center;justify-content:center;margin-bottom:1rem;">
+ <svg viewBox="0 0 24 24" fill="none" stroke="#2B7AB5" stroke-width="2" width="36" height="36" stroke-linecap="round">
  <path d="M22 12h-4l-3 9L9 3l-3 9H2"/>
  </svg>
  </div>
