--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -525,7 +525,7 @@
  }
  </style>
 </head>
-<body>
+<body class="category-tedavi">
  <header class="header">
  <div class="header-inner">
  <a href="../../index.html" class="logo">
