--- a/pages/uyku-stres.html
+++ b/pages/uyku-stres.html
@@ -205,16 +205,18 @@
  <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=1400&q=80">
  <source src="../videos/background-7.mp4" type="video/mp4">
  </video>
- <div class="page-hero-overlay"></div>
+ <div class="page-hero-overlay" style="background:linear-gradient(135deg, rgba(40,30,120,0.85), rgba(91,79,207,0.75))"></div>
  <div class="page-hero-content">
  <nav class="hero-breadcrumb">
  <a href="../index.html">Ana Sayfa</a>
  <span>›</span>
  <span class="current">Uyku & Stres</span>
  </nav>
- <div class="page-hero-icon">
- <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+ <div class="page-hero-icon" style="width:64px;height:64px;background:rgba(91,79,207,0.2);border-radius:50%;display:flex;align-items:center;justify-content:center;margin-bottom:1rem;">
+ <svg viewBox="0 0 24 24" fill="none" stroke="#5B4FCF" stroke-width="2" width="36" height="36">
  <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+ <path d="M14 2l1 2" stroke-opacity="0.5"/>
+ <path d="M18 5l1 1" stroke-opacity="0.5"/>
  </svg>
  </div>
  <h1>Uyku & Stres Rehberi</h1>
