--- a/pages/uyku/uyku-hijyeni.html
+++ b/pages/uyku/uyku-hijyeni.html
@@ -169,6 +169,8 @@
  <p>Kulaklık veya kulak içi kulaklıkla uyumak kulak kanalında baskı yarası, kulak enfeksiyonu ve kulak zarı hasarına neden olabilir. Beyaz gürültü için ayrı bir hoparlör veya özel uyku kulaklığı (yastık hoparlörü) tercih edin.</p>
  </div>
 
+ <div class="pull-quote">İdeal uyku ortamı 3 kelimeyle özetlenir: serin, karanlık, sessiz. Bu üçlüyü sağlarsanız uyku kaliteniz dramatik şekilde artar.</div>
+
  <h2>2. Yatak ve Yastık Seçimi</h2>
  <p>Uykunuzun %100'ünü geçirdiğiniz yüzeyin kalitesi, uyku kalitenizi doğrudan etkiler. İyi bir yatak yatırım değil, sağlık harcamasıdır.</p>
 
