--- a/pages/egzersiz.html
+++ b/pages/egzersiz.html
@@ -162,20 +162,20 @@
  <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1400&q=80">
  <source src="../videos/background-6.mp4" type="video/mp4">
  </video>
- <div class="page-hero-overlay"></div>
+ <div class="page-hero-overlay" style="background:linear-gradient(135deg, rgba(140,85,10,0.85), rgba(232,150,62,0.75))"></div>
  <div class="page-hero-content">
  <nav class="hero-breadcrumb">
  <a href="../index.html">Ana Sayfa</a>
  <span>›</span>
  <span class="current">Egzersiz Rehberi</span>
  </nav>
- <div class="page-hero-icon">
- <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
- <path d="M18 8h1a4 4 0 0 1 0 8h-1"/>
- <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"/>
- <line x1="6" y1="1" x2="6" y2="4"/>
- <line x1="10" y1="1" x2="10" y2="4"/>
- <line x1="14" y1="1" x2="14" y2="4"/>
+ <div class="page-hero-icon" style="width:64px;height:64px;background:rgba(232,150,62,0.2);border-radius:50%;display:flex;align-items:center;justify-content:center;margin-bottom:1rem;">
+ <svg viewBox="0 0 24 24" fill="none" stroke="#E8963E" stroke-width="2" width="36" height="36" stroke-linecap="round">
+ <path d="M6.5 6.5l11 11"/>
+ <path d="M21 3l-3.5 3.5"/>
+ <path d="M14 4l-1 3.5 3.5-1"/>
+ <path d="M3 21l3.5-3.5"/>
+ <path d="M10 20l1-3.5-3.5 1"/>
  </svg>
  </div>
  <h1>Egzersiz Rehberi</h1>
